--- a/method-draw/index.html
+++ b/method-draw/index.html
@@ -48,7 +48,12 @@
   <script type="text/javascript" src="lib/jgraduate/jpicker.min.js"></script>
   <script type="text/javascript" src="lib/mousewheel.js"></script>
   <script type="text/javascript" src="extensions/ext-grid.js"></script>
-  <script type="text/javascript" src="extensions/ext-cellbutton.js"></script>
+  
+  <!-- bio buttons -->
+  <script type="text/javascript" src="extensions/ext-biobutton-cell.js"></script>
+  <script type="text/javascript" src="extensions/ext-biobutton-neuron.js"></script>
+  <script type="text/javascript" src="extensions/ext-biobutton-bacteria.js"></script>
+  
   <script type="text/javascript" src="extensions/ext-mathjax.js"></script>
   <script type="text/javascript" src="lib/requestanimationframe.js"></script>
   
